# MK2

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac
.github/: ISSUE_TEMPLATE.md
.travis/: test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
.tx/: config
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: gitian-build.py  install_db4.sh  mk2x-cli.bash-completion  mk2x-qt.pro  mk2x-tx.bash-completion  mk2xd.bash-completion  valgrind.supp
contrib/debian/: README.md  changelog  control  mk2x-qt.desktop  mk2x-qt.install  mk2x-qt.lintian-overrides  mk2x-qt.manpages  mk2x-qt.protocol  mk2xd.bash-completion  mk2xd.examples  mk2xd.install  mk2xd.lintian-overrides  mk2xd.manpages  mk2xd.postinst  mk2xd.postrm  mk2xd.service  rules  watch
contrib/devtools/: README.md  check-doc.py  copyright_header.py  gen-manpages.sh  logprint-scanner.py  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/init/: README.md  mk2xd.conf  mk2xd.init  mk2xd.openrc  mk2xd.openrcconf  mk2xd.service  org.mk2x.pivxd.plist
contrib/linearize/: example-linearize.cfg
depends/: README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  bitcoin_logo_doxygen.psd  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  amount.cpp  amount.h  base58.cpp  base58.h  bip38.cpp  bip38.h  blob_uint256.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  (+115 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.h  macnotificationhandler.mm  mk2x.cpp  mk2x.qrc  mk2x_locale.qrc  mk2xstrings.cpp  networkstyle.cpp  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  (+31 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  rpcconsole.ui
src/qt/locale/: mk2x_de.ts  mk2x_en.ts  mk2x_en_US.ts  mk2x_es.ts  mk2x_fr_FR.ts  mk2x_hr_HR.ts  mk2x_it.ts  mk2x_ko_KR.ts  mk2x_nl.ts  mk2x_pl.ts  mk2x_ru.ts  mk2x_tr.ts  mk2x_zh_CN.ts
src/qt/mk2x/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  lockunlock.h  masternodeswidget.cpp  (+53 more)
src/qt/mk2x/forms/: addresseswidget.ui  coldstakingwidget.ui  csrow.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendcustomfeedialog.ui  sendmultirow.ui  topbar.ui  welcomecontentwidget.ui
src/qt/mk2x/res/css/: style_dark.css  style_light.css
src/qt/mk2x/res/img/: bg-dashboard-banner.psd  bg-welcome-container.psd  bg-welcome.psd  ic-nav-privacy-active.psd  img-logo-mk2x.psd  img-logo-mk2x.svg.psd  img-logo-mk2x@2x.psd  img-logo-mk2x@3x.psd  img-nav-logo.psd
src/qt/mk2x/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisenddialog.h  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/mk2x/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswidget.ui
src/qt/res/: mk2x-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns  bitcoin.psd
src/qt/res/images/: about.psd  splash.psd
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
test/: README.md
(+316 files in other folders)
